# packaging-party-practising

./: README.md  pyproject.toml
src/thisisatest/: __init__.py  hello-world.py
