[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thisisatest"
version = "0.0.6"
description = "Figuring out how to package a party"
readme = "README.md"
authors = [{ name = "Thomas Konings", email = "konings.thomas@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Image Processing",
]
keywords = ["Astrophysics", "Astronomy"]
dependencies = [
    "matplotlib",
    "xarray",
    "numpy"
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "bumpver", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/Magritte-code/p3droslo"

[tool.bumpver]
current_version = "0.0.6"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = false
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/thisisatest/__init__.py" = ["{version}"]
#"conda/meta.yaml" = ['version: "{version}"']
"README.md" = ['(version {version})']
#"docs/index.rst" = ['(version {version})']

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = [".", "src"]

#[project.scripts]
#realpython = "reader.__main__:main"
